--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,8 @@
 body {
   padding-top: 65px;
+  font-family: 'Lato', sans-serif;
+  background-color: #222831;
+  color: white;
 }
 
 .form-area{
@@ -31,4 +34,9 @@ body {
 }
 html{
   padding-bottom:10em;
+  font-family: 'Lato', sans-serif;
+}
+.chart-area{
+  margin:25px;
+  max-width:600px;
 }
